RESOLVED FIXED201479
MobileSafari may crash when invoking the C++ lambda in -[WKContentView _shareForWebView:]
https://bugs.webkit.org/show_bug.cgi?id=201479
Summary MobileSafari may crash when invoking the C++ lambda in -[WKContentView _share...
Wenson Hsieh
Reported 2019-09-04 16:40:16 PDT
Attachments
Patch (4.55 KB, patch)
2019-09-04 16:43 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-09-04 16:43:59 PDT
WebKit Commit Bot
Comment 2 2019-09-04 19:36:34 PDT
Comment on attachment 378027 [details] Patch Clearing flags on attachment: 378027 Committed r249514: <https://trac.webkit.org/changeset/249514>
WebKit Commit Bot
Comment 3 2019-09-04 19:36:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.