MobileSafari may crash when invoking the C++ lambda in -[WKContentView _shareForWebView:] https://bugs.webkit.org/show_bug.cgi?id=201479 <rdar://problem/51511834>

Reviewed by Tim Horton.

Source/WebKit:

Fix the crash by making -_shareForWebView: robust in the case where there are no selection rects
known in the UI process when -[WKContentView _share:] is invoked.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _shareForWebView:]):

Tools:

Add a test to verify that the UI process doesn't crash when invoking `_share:` while there's no selection.

* TestWebKitAPI/Tests/WebKitCocoa/WKContentViewEditingActions.mm:
* TestWebKitAPI/ios/UIKitSPI.h:


Canonical link: https://commits.webkit.org/215119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249514 268f45cc-cd09-0410-ab3c-d52691b4dbfc